syntax = "proto3";

package rti;

message RequestShowOrderHistorySummary
	{                                
	// PB_OFFSET = 100000, is the offset added for each MNM field id

	int32     template_id            = 154467;    // PB_OFFSET + MNM_TEMPLATE_ID
	repeated string    user_msg               = 132760;    // PB_OFFSET + MNM_USER_MSG

	string    fcm_id                 = 154013;    // PB_OFFSET + MNM_FCM_ID
	string    ib_id                  = 154014;    // PB_OFFSET + MNM_IB_ID
	string    account_id             = 154008;    // PB_OFFSET + MNM_ACCOUNT_ID 
        string    date                   = 110615;    // PB_OFFSET + MNM_DATE
	}
